# mcp-langgraph-demo

./: README.md  main.py  pyproject.toml  requirements.txt
infrastructure/docker/: docker-compose.dev.yml  example.env.dev
services/api-gateway/: Dockerfile  requirements.txt
services/api-gateway/src/: config.py  exceptions.py  logger.py  main.py
services/api-gateway/src/middleware/: auth.py
services/api-gateway/src/routes/: ask.py
services/langgraph-agent/: Dockerfile  requirements.txt
services/langgraph-agent/src/: exceptions.py  logger.py  main.py
services/langgraph-agent/src/agents/: chain_agent.py
services/langgraph-agent/src/config/: settings.py
services/langgraph-agent/src/routes/: ask.py
services/langgraph-agent/src/tools/: mcp_client.py
services/mcp-servers/math-server/: Dockerfile  math_tool.py  requirements.txt
services/mcp-servers/weather-server/: requirements.txt
services/mcp-servers/weather-server/src/: config.py  exceptions.py  logger.py  main.py
services/ui/: Dockerfile  requirements.txt
services/ui/src/: app.py  chat_ui.py
services/ui/src/utils/: api_client.py  config.py  logger.py  ui_helpers.py
